style: fixed About width to fit on mobile

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,5 +1,5 @@
 div, img {
-    width: 40em;
+    max-width: 40em;
     display: block;
     margin-left: auto;
     margin-right: auto;
